# shutter-api

./: .gitignore  README.md  add_tuple_script.sql  config.py  creation_script.sql  main.py  pyproject.toml  requirements.txt  shutter_backup.sql
Resources/: helloWorld.py
shutter_api/: __init__.py  config.py  main.py  mainServer.py
shutter_api/App/: __init__.py  api.py  config.py  routers.py
shutter_api/Keys/: __init__.py  keys.py
shutter_api/MySQL_command/: __init__.py  comment.py  gallery.py  home.py  publication.py  signIn.py  signUp.py  tableName.py  tableTitles.py  tag.py  user.py
shutter_api/MySQL_command/Comments/: __init__.py  comment.py  commentRate.py  commentValidation.py
shutter_api/MySQL_command/Galleries/: __init__.py  gallery.py  galleryPublication.py  galleryRate.py  galleryValidation.py
shutter_api/MySQL_command/Gallerys/: gallery.py  galleryPublication.py  galleryRate.py  galleryValidation.py
shutter_api/MySQL_command/Publications/: __init__.py  publication.py  publicationRate.py  publicationValidation.py
shutter_api/MySQL_command/Tags/: __init__.py  tags.py  tagsValidation.py
shutter_api/MySQL_command/Tools/: __init__.py  crypto.py  imagekitio.py  imgTobinary.py  tools.py
shutter_api/Resources/: __init__.py  helloWorld.py  user.py
shutter_api/Responses/: __init__.py  types.py
shutter_api/Routes/: __init__.py  comment.py  gallery.py  home.py  ping.py  publication.py  signIn.py  signUp.py  singUp.py  tags.py  user.py
shutter_api/Tools/: __init__.py  crypto.py  imagekitio.py  tableName.py  tools.py
(+4 files in other folders)
